# EFIT

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  INSTALL.rst  LICENSE.rst  README.md  RUN.rst  compare_eqdsks.py  config.h.cmake  config_docker_clang.sh  efit-pgf18.3  efitdud129.f90  test_kfiles.sh
cerlib/: CMakeLists.txt  Makefile64  hpalias.inc  makefile  makefile_copy  mds_getcer.f90  mds_interface.f90  mds_mtanh.f90  mds_mtanh_rdts.doc  mds_mtanh_rdts.f90  mds_rg.f90  mds_write_rg.f90  mdslib.f90  mdslib.inc
cuda/: norm.h  (+12 more)
efit/: CMakeLists.txt  Makefile  Makefile64  Makefile64.dev  MakefileIris  README  auto_knot.F90  autoknot.F90  beta_li.F90  bound.F90  bound.f90  boundary.F90  boundud129.f90  bunemad.f90  buneman.f90  chke.f90  chkerr.f90  chkeud129.f90  constraints.F90  current.f90  currnt.f90  curve2d.inc  curve2d129.inc  curve2d_mod.f90  curve2d_var.inc  cyclic.F90  data_input.F90  data_input.f03  data_input.f90  diamagnetic.f90  ece.F90  ecom1-mods.f90  ecom2-mods.f90  eebasisfunc.f90  efit.F90  efit_bdata.F90  efit_tables.F90  efit_tables.f90  efit_utils.F90  efitai.F90  (+122 more)
green/: CMakeLists.txt  Makefile  acoil.f90  cacoil.f90  cecoil.f90  coilsp.f90  cvesel.f90  dprobe.f90  ecoil.f90  efund.f90  efund_read.f03  efund_read.f90  efundud.f90  efundud.f90_d  exparm.f90  fcoil.f90  fshift.f90  grid.f90  machine.f90  mprobe.f90  nio.f90  rogowl.f90  siloop.f90  utils.f90  vas_sub1.f90  vessel.f90
io/: CMakeLists.txt  FindCDF.cmake  FindMDSPLUS.cmake  FindMDSPlus.cmake  FindNetCDF.cmake  disspla_dummy.F  efitIO.cmake  efitMath.cmake  efit_version.in.F90  git.cmake  hdf5_fcapi.f90  mdsfdummy.f  netcdf_dummy.F  ptdata_dummy.F
math/netlib_lite/include/: CMakeLists.txt
math/netlib_lite/lsode/: CMakeLists.txt  Makefile.depend  dgbfa.f  dgbsl.f  dintdy.f  dstode.f  idamax.f  isize_get_lsode.c  lsode.f  lsode_dummy.h  lsode_module.f  lsode_r8.F
math/netlib_lite/other/: CMakeLists.txt  r8tomsqz.F  tomsqz.f
math/netlib_lite/r8slatec/: CMakeLists.txt  d1mach.c  d9aimp.F  d9atn1.F  d9b0mp.F  d9b1mp.F  d9chu.F  d9gmic.F  d9gmit.F  d9knus.F  d9lgic.F  d9lgit.F  d9lgmc.F  d9ln2r.F  d9pak.F  d9upak.F  dacosh.F  dai.F  daie.F  dasinh.F  dasyik.F  dasyjy.F  datanh.F  dbdiff.f  dbesi.F  dbesi0.F  dbesi1.F  dbesj.F  dbesj0.F  dbesj1.F  dbesk.F  dbesk0.F  dbesk1.F  dbesks.F  dbesy.F  dbesy0.F  dbesy1.F  dbeta.F  dbetai.F  dbi.F  (+149 more)
mtanh/: CMakeLists.txt  README.md  mds_mtanh.f90  mds_mtanh_rdts.f90  mds_rg.f90  test_get_mtanh_ts.f90
test/: CMakeLists.txt  check_efit_results.sh.in  check_efit_snap_results.sh.in  check_efund_results.sh.in  check_green_results.sh.in  efit.input.in  efit.setup.in  rerun_efit_hdf5.sh.in  run_efit.sh.in  run_efit_hdf5.sh.in  run_efit_input.sh.in  run_efit_mpi.sh.in  run_efit_snap.sh.in  run_efund.sh.in  run_green.sh.in
test/DIIID/: CMakeLists.txt  ccoil.ddd  test_all.sh
test/DIIID/ece/: 186610.h5  CMakeLists.txt  k186610.02400  k186610.02500  k186610.02600  k186610.02700
test/DIIID/efit01/: 186610.h5  186610_mpi.h5  CMakeLists.txt  OMFIT_run_command.sh  g163303.02000  k163303.02000  k186610.02300  k186610.02400  k186610.02500  k186610.02600  k186610.02700  run_command.sh
test/DIIID/efit01_snap/: CMakeLists.txt  efit_snap.dat_EFIT01_186610
test/DIIID/efit02/: 186610.h5  186610_mpi.h5  CMakeLists.txt  OMFIT_run_command.sh  errfil.out  k163303.02000  k186610.02300  k186610.02400  k186610.02500  k186610.02600  k186610.02700  m163303.02000
test/DIIID/efit02_snap/: CMakeLists.txt
test/DIIID/efit02er/: 186610.h5  186610_mpi.h5  CMakeLists.txt  k186610.02300  k186610.02400  k186610.02500  k186610.02600  k186610.02700  run_command.sh
test/DIIID/efit02er_snap/: CMakeLists.txt  efit_snap.dat_EFIT02er_186610
test/DIIID/efit04_mpi/: CMakeLists.txt  k186610.02300  k186610.02400  k186610.02500  k186610.02600
test/DIIID/efund/: CMakeLists.txt
test/DIIID/esave/: 186610.h5  186610_mpi.h5  CMakeLists.txt  k186610.02400  k186610.02500  k186610.02600  k186610.02700
test/DIIID/fitvs/: CMakeLists.txt  k186610.02400  k186610.02500  k186610.02600  k186610.02700
test/DIIID/fitzts_snap/: CMakeLists.txt
test/DIIID/green/: CMakeLists.txt
test/DIIID/input/: 186610_mpi.h5  CMakeLists.txt  k186610.02400  k186610.02500  k186610.02600  k186610.02700
test/DIIID/input_snap/: CMakeLists.txt  efit_snap.dat_EFIT01_186610
test/DIIID/integral_method/: CMakeLists.txt  k186610.02400  k186610.02500  k186610.02600  k186610.02700
test/DIIID/kineticEFIT/: 186610.h5  CMakeLists.txt  OMFIT_run_command.sh  a161409.01400  errfil.out  g161409.01400  k161409.01400  k186610.02300  k186610.02400  k186610.02500  k186610.02600  m161409.01400  run_command.sh
test/DIIID/mtanh/: CMakeLists.txt  check_results.sh.in  output.txt  run_mtanh.sh.in
test/DIIID/parallel/: a163303.01000  a163303.01060  a163303.01080  a163303.01100  a163303.01120  a163303.01140  efit.input  efit.sbatch  errfil.out  g163303.01000  g163303.01040  g163303.01060  g163303.01120  g163303.01140  k163303.01040  k163303.01080  k163303.01140  m163303.01040  m163303.01060  m163303.01080  m163303.01100  m163303.01120
test/DIIID/previous-init/: 186610.h5  186610_input.h5  CMakeLists.txt  gin02400  gin02500  gin02600  gin02700  k186610.02400  k186610.02500  k186610.02600  k186610.02700  k186610.02800  k186610.02900  k186610.03000  k186610.03100
test/DIIID/restart/: 186610.h5  186610_input.h5  186610_input_mpi.h5  186610_mpi.h5  CMakeLists.txt  gin02400  gin02500  gin02600  gin02700  k186610.02400  k186610.02500  k186610.02600  k186610.02700
test/DIIID/rfile/: 186610.h5  186610_input.h5  CMakeLists.txt  OMFIT_run_command.sh  a163303.01000  ain  errfil.out  fort.10  g163303.01000  gin  rfile.txt  run_command.sh  x163303.01001
test/DIIID/serial/: a163303.01020  a163303.01040  efit_snap.dat_EFIT01  errfil.out  g163303.01020  g163303.01080  g163303.01100  k163303.01000  k163303.01020  k163303.01060  k163303.01100  k163303.01120  m163303.01000  m163303.01020  m163303.01040  m163303.01080  m163303.01120  m163303.01140
test/ITER/: CMakeLists.txt  rfile.txt
test/NSTX/: CMakeLists.txt
(+724 files in other folders)
